# generate_baselines_mila

./: .gitignore  README.md  TODO.md  pyproject.toml
configs/: lstm_gpu_example.json  ngram_additive_example.json
docs/: compute_placement.md  lstm-baseline-pipeline.md
slurm/: audit_full_79_lstm.sbatch  cpu_ngram_baselines.sbatch  full_79_ngram_baselines.sbatch  gpu_lstm_baselines.sbatch  modular_repos_smoke.sbatch  prepare_full_79_lstm.sbatch  run_full_79_lstm_cell.sbatch  submit_full_79_lstm.sh
src/generate_baselines_mila/: __init__.py  __main__.py  big_cleaned.py  cli.py  full79_lstm.py  io.py  lstm.py  manifest.py  ngram.py  tokenize.py
tests/: test_full79_lstm_production.py  test_lstm_generation.py  test_ngram_generation.py
