[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-baselines-mila"
version = "0.1.0"
description = "Cluster-ready baseline utterance generation for communicative-efficiency analyses."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Nicolas Goulet", email = "nicolas.goulet@hec.ca"}
]
dependencies = []

[project.scripts]
generate-baselines-mila = "generate_baselines_mila.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
